# http-log-monitor

./: Cargo.toml  README.md
generator/: Cargo.toml
generator/src/: main.rs
processor/: Cargo.toml
processor/src/: alerts.rs  lib.rs  main.rs  stats.rs
processor/src/display/: cli.rs  mod.rs
