[package]
name = "generator"
version = "0.1.0"
authors = ["Adrian Fraiha <aef@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
processor = { path = "../processor" }
csv = "1.1"
chrono = "0.4"
rand = "0.8.3"

